avoid print page break in item, instead of section

--- a/style.css
+++ b/style.css
@@ -131,8 +131,11 @@ a {
         display: none;
     }
     .section {
-        page-break-inside: avoid; 
         margin-bottom: 20px; 
+    }
+
+    .item {
+        page-break-inside: avoid; 
     }
 
     .section h2 {
